# bambu-octoprint-emulator

./: .dockerignore  Cargo.toml  Dockerfile  README.md
cfg/: default.toml
src/: bambu_tls.rs  config.rs  main.rs  octoprint_server.rs  printer_spy.rs  slurper.rs
