[package]
name = "bambu-octoprint-emulator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-tls = "0.13.0"
native-tls = "0.2.13"
axum = "0.8.1"
config = { version = "0.15.8", features = ["toml", "convert-case", "async"], default-features = false }
lazy_static = "1.5.0"
rumqttc = { git = "https://github.com/bytebeamio/rumqtt", rev = "2377e4e2c57bbcbdb1b2d5372556f8b3977b03b5", default-features = false, features = ["use-native-tls"] }
serde = { version = "1.0.217", features = ["derive", "rc"] }
serde_json = "1.0.138"
suppaftp = { version = "6.0.7", features = ["async-native-tls", "deprecated"] }
surge-ping = "0.8.1"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "sync", "time", "tokio-macros"] }
tokio-util = "0.7.13"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
unix_path = "1.0.1"
webpki = "0.22.4"
zip = "2.2.2"
merge = "0.1.0"
